# lidar_auto_docking

./: CMakeLists.txt  Dock.stl  README.md  package.xml
.github/workflows/: workflow.yaml
action/: Dock.action  Undock.action
config/: autodock_params.yaml
include/lidar_auto_docking/: autodock.h  controller.h  dock_candidate.h  icp_2d.h  laser_processor.h  linear_pose_filter_2d.h  otherstuff.h  perception.h  printstuff.h  tf2listener.h
initial_dock_pose/: init_dock.json  test.txt
launch/: autodock_launch.py  dock_pose_saver.py  dockpose_saver_launch.py  dockrobot_launch.py  nav2_dock.launch.py  undock_robot_launch.py
msg/: Initdock.msg
scripts/: dock_robot.py  dock_saver.py  dock_test.py  nav2_dock.py  read_init_dock.py  test_script.py  undock_robot.py  undock_test.py  write_init_dock.py
src/: autodock.cpp  controller.cpp  do_stuff.cpp  dock_coordinates.cpp  icp_2d.cpp  laser_processor.cpp  linear_pose_filter_2d.cpp  perception.cpp  perception_test.cpp  print_stuff.cpp  sharedptr_test.cpp  tf2listener.cpp  tf2listener_test.cpp
